// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > should parse postgresql to JSON correctly 1`] = `
{
  "relationships": {},
  "tables": {
    "users": {
      "color": null,
      "comment": null,
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "increment": false,
          "name": "id",
          "notNull": true,
          "primary": true,
          "type": "",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "increment": false,
          "name": "username",
          "notNull": true,
          "primary": false,
          "type": " ",
          "unique": true,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "increment": false,
          "name": "email",
          "notNull": true,
          "primary": false,
          "type": " ",
          "unique": true,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "increment": false,
          "name": "created_at",
          "notNull": false,
          "primary": false,
          "type": " ",
          "unique": false,
        },
      ],
      "indices": [],
      "name": "users",
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`parse > should parse schema.rb to JSON correctly 1`] = `
{
  "relationships": {},
  "tables": {
    "users": {
      "color": null,
      "comment": null,
      "fields": [
        {
          "check": null,
          "comment": null,
          "default": null,
          "increment": false,
          "name": "id",
          "notNull": false,
          "primary": false,
          "type": "varchar",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": null,
          "increment": false,
          "name": "company_id",
          "notNull": true,
          "primary": false,
          "type": "uuid",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": null,
          "increment": false,
          "name": "created_at",
          "notNull": true,
          "primary": false,
          "type": "datetime",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": "new user",
          "increment": false,
          "name": "name",
          "notNull": false,
          "primary": false,
          "type": "string",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": 30,
          "increment": false,
          "name": "age",
          "notNull": false,
          "primary": false,
          "type": "string",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": false,
          "increment": false,
          "name": "is_deleted",
          "notNull": false,
          "primary": false,
          "type": "string",
          "unique": false,
        },
        {
          "check": null,
          "comment": null,
          "default": null,
          "increment": false,
          "name": "user_name",
          "notNull": true,
          "primary": false,
          "type": "string",
          "unique": false,
        },
      ],
      "indices": [],
      "name": "users",
      "x": 0,
      "y": 0,
    },
  },
}
`;
